--- a/web/css/personal.css
+++ b/web/css/personal.css
@@ -81,7 +81,7 @@
 	Filter:alpha(opacity=80);
 	text-decoration:none;
 }
-.info, .ad{
+.info, .ad, .score{
 	position:relative;
 }
 .ad p.prompt {
@@ -94,7 +94,7 @@
     top: 15px;
 	font-size:13px;
 }
-.info a.edit, .ad a.more{
+.info a.edit, .ad a.more, .score a.more{
 	position:absolute;
 	right:20px;
 	top:20px;
