--- a/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
@@ -81,7 +81,7 @@ function addClass(type){
             <th>任务领取时间</th>
             <th>任务状态</th>
         </tr>
-        {% if pagination %}
+        {% if adtaste %}
          {% for item in pagination %}
         <tr>
           <td>
