--- a/src/Jili/ApiBundle/Resources/views/Game/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Game/index.html.twig
@@ -20,13 +20,15 @@
  <div id="container">
          <!--    *** ▼▼▼ Header ▼▼▼ ********************    -->
          <div id="header">
-             <a href="{{ path("_game_chick") }}"><img src="{{ asset("images/banner.png") }}" /></a>
+             <a href="{{ path("_game_chick") }}"><img src="{{ asset("images/banner-1.png") }}" /></a>
          </div><!--    *** ▲▲▲ /End Header ▲▲▲ ********************    -->
          
          <!--    *** ▼▼▼ Contents ▼▼▼ ********************    -->
+         <div id="rule"><img src="{{ asset("images/rank.png") }}" /></div>
          <div id="contents">
+
              <!-- ++++++++++++++++ ポイント ++++++++++++++++ -->
-             <dl class="point_list frame">
+           <!--   <dl class="point_list frame">
                  <dt class="frame">关于积分的获取</dt>
                  <dd class="frame">
                      <p>
@@ -81,7 +83,7 @@
                      
                      <span class="red fClear">※取得了通关时授予的道具奖励的朋友，将不能再取得全勤奖的奖励。敬请见谅！</span>
                      
-                 </dd>
+                 </dd> -->
              </dl>
              
              <!-- ++++++++++++++++ ゲーム開始ボタン ++++++++++++++++ --><!-- ++++++++++++++++ ゲームの遊び方 ++++++++++++++++ -->
