--- a/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
@@ -86,7 +86,7 @@ $(function(){
                 {% if item.incentiveType==1 %}
                      <span>{{ item.incentive }}</span>米粒
                      {% elseif item.incentiveType==2 %}
-                                                                 最高获消费额<span>{{ item.incentiveRate }}%</span>
+                                                                 最高获消费额<span>{{ item.incentiveRate/100 }}%</span>
                      {% else %}
                      {% endif %}
                   </p>
