--- a/src/Jili/ApiBundle/Resources/views/Admin/exchangeInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/exchangeInfo.html.twig
@@ -5,15 +5,26 @@
 <LINK href="{{ asset('css/admin.css')}}" type="text/css" rel="stylesheet">
 <link href="{{ asset('css/pageNav.css')}}" rel="stylesheet" type="text/css" />
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
+<SCRIPT src="{{ asset('js/load.js')}}" type=text/javascript></SCRIPT>
+<script src="{{ asset('js/My97DatePicker/WdatePicker.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js/kindeditor/kindeditor.js')}}" type="text/javascript"></script>
 </HEAD>
 <BODY>
+<form action="{{ path('_admin_exchangeInfo') }}" method="post" id="form1"}} >
 <table align="center" width="1024">
+<tr><td colspan="7">&nbsp;</td></tr>
+<tr><td colspan="7">&nbsp;</td></tr>
+<tr><td colspan="7" align="center">兑换开始时间:<input name="start_time" value="{{ start }}" size="26" maxlength="60" readonly="readonly" onClick="WdatePicker()"  class="Wdate" style="cursor:pointer"/>
+&nbsp;兑换结束时间:<input name="end_time" value="{{ end }}" size="26" maxlength="60" readonly="readonly" onClick="WdatePicker()"  class="Wdate" style="cursor:pointer"/>&nbsp;<input type="submit" name="select" value="查 询"/>&nbsp;<input type="submit" name="add" value="导出兑换数据"/>&nbsp;(时间不选为全部导出)</td></tr>
+<tr><td colspan="7">&nbsp;</td></tr>
     	<tr>
         	<th>兑换账号</th>
         	<th>91问问账号</th>
             <th>兑换时间</th>
             <th>兑换米粒</th>
             <th>兑换类型</th>
+            <th>兑换状态</th>
+            <th>兑换完成时间</th>
         </tr>
         {% if pagination %}
          {% for item in pagination %}
@@ -23,11 +34,12 @@
           <td align="center">{{ item.exchangeDate.date | date('Y-m-d') }}</td>
           <td align="center">{{ item.targetPoint }} </td>
            <td align="center">{{ item.type }}</td>
+           <td align="center">{% if item.status==1 %}兑换成功{% elseif  item.status==2 %}兑换失败{% else %}审核中{% endif %}</td>
+           <td align="center">{% if item.finishDate %}{{ item.finishDate.date | date('Y-m-d') }}{% endif %}</td>
         </tr>
          {% endfor %}
          {%  endif %}
-         <tr><td align="center" colspan="4"><a href="{{ path('_admin_exchangeCsv') }}"><h3>导出兑换数据</h3></a></td> </tr>
-    </table>
+    </table></form>
     {{ knp_pagination_render(pagination) }}
 
 </BODY></HTML>
