--- a/src/Jili/ApiBundle/Resources/views/User/exchange.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/exchange.html.twig
@@ -83,11 +83,11 @@ function addClass(type){
       {% if exchange %}
          {% for item in pagination %}
           <tr>
-            <td>{{ item.exchangeDate.date }}</td>
+            <td>{{ item.exchangeDate.date | date('Y-m-d') }}</td>
             <td>{{ item.type }}</td>
             <td>{{ item.targetPoint }}</td>
-            <td>{% if item.status %} {{ item.finishDate.date }} {% else %} {% endif %}</td>
-            <td>{% if item.status %} 兑换成功  {% else %} 处理中 {% endif %}</td>
+            <td>{% if item.status %} {{ item.finishDate.date | date('Y-m-d') }} {% else %} {% endif %}</td>
+            <td>{% if item.status %} {% if item.status==1 %} 兑换成功 {% elseif item.status==2 %} 兑换失败 {% else %} {% endif%}  {% else %} 处理中 {% endif %}</td>
           </tr>
           {% endfor %}
       {% else %}
