--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -214,11 +214,11 @@ $(document).ready(function(){
         {% if exchange %}
         {% for item in exchange %}
         <tr>
-          <td>{{ item.exchangeDate.date }}</td>
+          <td>{{ item.exchangeDate.date | date('Y-m-d') }}</td>
           <td>{{ item.type }}</td>
            <td>{{ item.targetPoint }}</td>
-          <td>{% if item.status %} {{ item.finishDate.date }} {% else %} {% endif %}</td>
-          <td>{% if item.status %} 兑换成功  {% else %} 处理中 {% endif %}</td>
+          <td>{% if item.status %} {{ item.finishDate.date | date('Y-m-d')  }} {% else %} {% endif %}</td>
+          <td>{% if item.status %}{% if item.status==1 %}兑换成功 {% elseif item.status==2 %}兑换失败 {% else %} {% endif %} {% else %} 处理中 {% endif %}</td>
         </tr>
         {% endfor %}
           <a href="{{  asset(path('_user_exchange',{'type': 1}),'cdn1') }}" class="more edit">更多 »</a>
