--- a/src/Jili/ApiBundle/Resources/views/Exchange/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/info.html.twig
@@ -74,7 +74,8 @@ function changePoint(){
         <dt>
           {{ user.wenwenUser }}
           <input name="ck" id="ck" type="checkbox" value="1">
-                              确定
+                              确定<br />
+           <span class="info">如您91问问账号已更改，请发送邮件至<a href="mailto:cs@91jili.com">cs@91jili.com</a>，<br />或联系我们的<a target="_blank" href="http://www.weibo.com/91jili">新浪微博</a>或<a target="_blank" href="http://t.qq.com/china91jili">腾讯微博</a>。</span>
          </dt>
        {% else %}
        <dd>您的91问问账号：</dd>
