--- a/web/css/personal.css
+++ b/web/css/personal.css
@@ -1,8 +1,40 @@
+.resDiv{
+	margin-top: 20px;
+	float: left;
+	margin-left: 10px;
+}
+.resImg{
+	width:100px;
+	height:100px;
+	overflow:hidden;
+	display:inline-block;
+}
+.resizeSubmit{
+	margin-top: 10px;
+}
+.resBut{
+	width:100%;
+	padding:5px 0;
+	color: #FFF;
+	background-color: #54b9e8;
+	cursor: pointer;
+}
+.cancerBut{
+	width:100%;
+	padding:5px 0;
+	margin-top: 10px;
+	color: #7f7f7f;
+	background-color: #dcdcdc;
+	cursor: pointer;
+}
 .personal {
 	margin: auto;
 	width: 960px;
 	padding: 45px 0 140px 0;
 	font-size: 14px;
+}
+.infoReset{
+
 }
 .personal section {
 	background-color: #ffffff;
@@ -137,14 +169,19 @@
 	padding: 5px;
 	width: 360px;
 }
-.info ul li dt input[type="submit"] {
-	height: 29px;
-	background-image: url(../images/formButtonBg);
-	border: 1px solid #cf410c;
-	padding: 0 10px;
-	font-size: 14px;
-	color: #FFF;
-	border-radius: 5px;
+.info ul li dt input.infoFinish {
+	background-color: #54B9E8;
+    color: #FFFFFF;
+    cursor: pointer;
+    padding: 5px 0;
+    width: 60px;
+}
+.info ul li dt input.infoReset {
+	background-color: #DCDCDC;
+    color: #7F7F7F;
+    cursor: pointer;
+    padding: 5px 0;
+    width: 60px;
 }
 .ad .selectTable{
 	border: 1px solid #b8d4e0;
