--- a/web/css/login.css
+++ b/web/css/login.css
@@ -26,7 +26,7 @@
 	color: #F9840D;
     font-size: 22px;
     font-weight: bold;
-    margin: 0 auto 10px;
+    margin: 0 auto;
 }
 .login article .loginForm li{
 	width:100%;
@@ -44,7 +44,6 @@
 	padding:10px 5px 10px 30px;
 	vertical-align:middle;
 	width:235px;
-	box-shadow:1px 1px 3px #CCC inset;
 	margin:1px;
 	height:15px;
 	line-height:15px;
