--- a/web/css/index.css
+++ b/web/css/index.css
@@ -128,16 +128,26 @@
 	Filter:alpha(opacity=80);
 }
 .index section.one #userInformation .after .user p{
-	margin:20px 0;
-	white-space:nowrap;
+	margin:10px 0;
 }
 .index section.one #userInformation .after .user p.point{
 	font-size:18px;
 	color:#CCC;
+	position: absolute;
+	bottom: 95px;
 }
 .index section.one #userInformation .after .user p.point span{
 	color:#FF7114;
 	font-weight:bold;
+}
+.index section.one #userInformation .after .user p a.hello{
+	display: inline-block;
+	width: 100px;
+	word-wrap:break-word;
+}
+.index section.one #userInformation .after .user p a.personal{
+	display: inline-block;
+	margin-top: 8px;
 }
 .index section.one #userInformation .after .user p a.personal:hover img{
 	opacity: .8;
