--- a/web/css/common.css
+++ b/web/css/common.css
@@ -24,7 +24,24 @@ div#rule{
     width: 100%;
     margin-bottom: 5px;
 }
+.game_start{
+	position:relative;
+}
 
+.game_start a{
+	position:absolute;
+	right:5px;
+	_right:9px;
+	top:2px;
+	width:100%;
+	height:311px;
+	display:inline-block;
+	font-size:0;
+	background:url(../images/game_start_btn.jpg) no-repeat scroll 650px 200px transparent;
+}
+.game_start a:hover{
+	background:url(../images/game_start_btn_h.jpg) no-repeat scroll 650px 200px transparent;
+}
 /* ++++++++++++++++++++++++++++++++++++++++++++
 　■ポイント
 ++++++++++++++++++++++++++++++++++++++++++++ */
