--- a/src/Jili/ApiBundle/Resources/views/Admin/selectUser.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/selectUser.html.twig
@@ -15,10 +15,7 @@
 <BODY>
 <form action="{{ path('_admin_selectUser') }}" method="post" id="form1"}} >
 <table align='center'>
-<tr><td>{% if code == 1 %}<font color='red'>请选择时间</font>
-		{% elseif code ==2 %}<font color='red'>结束时间要大于开始时间</font>
-		{% else %}{{ count_user }}
-		{% endif %}</td></tr>
+<tr><td>{{ count_user }}</td></tr>
 <tr><td>注册开始时间:<input name="start_time" value="" size="26" maxlength="60" readonly="readonly" onClick="WdatePicker()"  class="Wdate" style="cursor:pointer"/>
 &nbsp;注册结束时间:<input name="end_time" value="" size="26" maxlength="60" readonly="readonly" onClick="WdatePicker()"  class="Wdate" style="cursor:pointer"/>&nbsp;<input type="submit" name="add" value="提 交"/></td></tr>
 </table>
