--- a/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
@@ -76,7 +76,7 @@ $(function(){
     <section class="process"><img src="{{ asset('images/process.jpg')}}" width="960" height="85"></section>
   <section class="main">
     	<article>
-        	<h2><img src="{{ asset('images/hotTask.jpg')}}" width="209" height="19" alt="热门任务"><a class="more" href="{{ asset(path('_advertiserment_list'),'cdn1') }}">更多>></a></h2>
+        	<h2><img src="{{ asset('images/hotTask.jpg')}}" width="209" height="19" alt="热门任务"><a class="more" href="{{ asset(path('_shopping_list'),'cdn1') }}">更多>></a></h2>
         	
         	{% for item in advertise %}
                <div class="task">
@@ -111,7 +111,9 @@ $(function(){
              <section style="height:400px;">
             	<h4>最新兑换</h4>
               <ul class="timeline">
-                  <li>暂无兑换信息</li>
+                {% for item in exchange %}
+                  <li><span class="userNick">{{ item.nick }}</span>兑换了{{ item.type}}<span class="userType">{{ item.targetPoint }}</span>积分</li>
+               {% endfor %}
                 </ul>
             </section>
            
