--- a/web/css/personal.css
+++ b/web/css/personal.css
@@ -13,14 +13,14 @@
 	margin-top: 10px;
 }
 .resBut{
-	width:100%;
+	width:100px;
 	padding:5px 0;
 	color: #FFF;
 	background-color: #54b9e8;
 	cursor: pointer;
 }
 .cancerBut{
-	width:100%;
+	width:100px;
 	padding:5px 0;
 	margin-top: 10px;
 	color: #7f7f7f;
