--- a/web/css/index.css
+++ b/web/css/index.css
@@ -1,8 +1,8 @@
 .userNick{
-	color:#0000ff;
+	color:#54B9E8;
 }
 .userType{
-	color:#ff0000;
+	color:#ec4920;
 }
 .index section.one, .index section.process, .index section.main {
 	margin: 20px 0 0px 0;
