--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -201,8 +201,13 @@ $(document).ready(function(){
   </section>
 
   <section>
+
     <h3>我的任务历史<a class="close">关闭</a><a class="open" style="display:none;">打开</a></h3>
     <div class="content ad">
+    {% if adtasteNum > 0 %}
+      <p class="prompt">*&nbsp;商家审核需要8周，判定有效后立即到账（退货无返利）</p>
+      <a href="{{ asset(path('_user_adtaste',{'type': 1}),'cdn1') }}" class="more edit">更多 »</a>
+    {% endif %}
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <th>任务类型</th>
@@ -210,8 +215,7 @@ $(document).ready(function(){
           <th>奖励积分</th>
           <th>任务领取时间</th>
           <th>任务状态</th>
-        </tr>
-        {% if adtasteNum > 0 %}
+        </tr>     
          {% for item in adtaste %}
         <tr>
           <td>
@@ -247,9 +251,7 @@ $(document).ready(function(){
           </td>
         </tr>
          {% endfor %}
-         <p class="prompt">*&nbsp;商家审核需要8周，判定有效后立即到账（退货无返利）</p>
-         <a href="{{ asset(path('_user_adtaste',{'type': 1}),'cdn1') }}" class="more edit">更多 »</a>
-          {% else %}
+        {% if adtasteNum == 0 %}
         <tr><td align="center" colspan="5">没有任务记录</td></tr>
         {% endif %}
       </table>
