--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
@@ -4,6 +4,7 @@
 <head>
 <meta charset="UTF-8" />
 <title>积粒网-体验广告</title>
+{% include 'JiliApiBundle::seo.html.twig' %}
 <!-- [if lt IE9] -->
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
 <!-- [endif] -->
