--- a/src/Jili/ApiBundle/Resources/views/Callboard/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Callboard/info.html.twig
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <title>积粒网-公告</title>
+{% include 'JiliApiBundle::seo.html.twig' %}
 <!-- [if lt IE9] -->
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
