--- a/src/Jili/ApiBundle/Resources/views/Game/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Game/index.html.twig
@@ -7,6 +7,7 @@
 <meta http-equiv="content-style-type" content="text/css" />
 <meta http-equiv="content-script-type" content="text/javascript" />
 <title>积粒网-PAG骰子游戏概要画面</title>
+{% include 'JiliApiBundle::seo.html.twig' %}
 <!-- [if lt IE9] -->
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
 <!-- [endif] -->
