--- a/src/Jili/ApiBundle/Resources/views/User/resetPwd.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/resetPwd.html.twig
@@ -43,7 +43,7 @@ function check(){
 				$("#sendEmail").html('重新发送');
 				$("#sendEmail").attr("onclick",""); 
 			}else{
-				alert('邮件未注册');
+				alert(data);
 				$("#email").val('');
 			}
 		}
