--- a/src/Jili/ApiBundle/Resources/views/Exchange/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/info.html.twig
@@ -110,15 +110,8 @@ function changePoint(){
       <div class="changePoint mt50">本次充值所需米粒：<span class="rechange">500</span></div>
       <div class="changePoint">兑换后剩余米粒：<span id="over">{{ points-500 }}</span></div>
       <div><span>
-      {% if code==1 %}
-     <font color='red'>请输入91问问账号</font>
-     {% elseif code==2 %}
-     <font color='red'>91问问账号为邮件格式</font>
-      {% elseif code==3 %}
-     <font color='red'>已成功兑换，等待账号绑定</font>
-     {% elseif code==4 %}
-     <font color='red'>积分错误，兑换失败</font>
-     {% else %}
+      {% if code %}
+          <font color='red'>{{ code }}</font>
      {% endif %}
      </span></div>
       <div class="btnArea mt50"><img id="active" onclick="change();" src="{{ asset('images/changeEnterBtn.jpg')}}" width="175" height="60">
