对应  issue #33 隐藏非常用邮箱的按钮

--- a/src/Jili/ApiBundle/Resources/views/User/checkReg.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/checkReg.html.twig
@@ -63,11 +63,9 @@ function SetRemainTime() {
    	    <div class="img"><img src="{{ asset('images/emailImage.jpg')}}" width="123" height="115"></div>
         <p>我们已经发送了激活邮件给您<br />请查看您的邮箱，确认是否收到来自积粒网的激活邮件，并点击邮件中的验证链接。<br />
         {% if gotoEmial %}
-         <a href="http://{{ gotoEmial }}" target="_blank">
-        {% else %}
-        <a href="{{ path('_default_error') }}" target="_blank">
-        {% endif %}
-       <img src="{{ asset('images/goMailBtn.jpg')}}" width="128" height="35"></a></p>
+            <a href="http://{{ gotoEmial }}" target="_blank">
+           <img src="{{ asset('images/goMailBtn.jpg')}}" width="128" height="35"></a>
+       {% endif %}</p>
         <p><span id="sendAgain">已发送&nbsp;&nbsp;</span><a class="again" >没收到？再次发送！</a><span id="prompt"><span id="second">59</span>秒后可重新发送</span></p>
          <input type='hidden' id='uid' value='{{ user.id }}'/>
         <input type='hidden' id='code' value='{{ user.code }}'/>
