--- a/src/Jili/ApiBundle/Resources/views/Game/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Game/index.html.twig
@@ -25,6 +25,7 @@
 			 <a class="game_start_btn" href="{{ path("_game_chick") }}">开始</a>
          </div><!--    *** ▲▲▲ /End Header ▲▲▲ ********************    -->
          <!--    *** ▼▼▼ Contents ▼▼▼ ********************    -->
+         <div style="margin-bottom:6px;"><img src="{{ asset("images/strategy.png") }}" /></div>
          <div id="rule"><img src="{{ asset("images/rank.png") }}" /></div>
          <div id="contents">
 
