--- a/src/Jili/ApiBundle/Resources/views/Admin/editCallboard.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/editCallboard.html.twig
@@ -26,6 +26,11 @@
 <tr><td>公告标题:</td><td><input type="text" name="title" size='60' value="{{ callboard.title }}"/></td></tr>
 <tr><td>公告作者:</td><td><input type="text" name="author" size='60' value="{{ callboard.author }}"/></td></tr>
 <tr><td>发布时间:</td><td><input name="start_time" value="{{ callboard.startTime | date('Y-m-d') }}" size="26" maxlength="60" readonly="readonly" onClick="WdatePicker()"  class="Wdate" style="cursor:pointer"/></td></tr>
+
+<tr><td>公告分类:</td><td>
+	<select name="category">{% for item in cb_category %}<option value="{{ item.id }}" {% if callboard.cbType==item.id %} selected = "selected" {% endif%}>{{ item.categoryName }}</option>{% endfor %}</select>
+</td></tr>
+
 <tr><td>公告内容:</td><td><textarea id="content" cols="120" rows="10" name="content" style="width:700px;height:300px;">{{ callboard.content }}</textarea></td></tr>
 
 <tr><td>&nbsp;</td><td><input type="submit" name="add" value="提 交"/></td></tr>
