--- a/src/Jili/ApiBundle/Resources/views/Admin/infoCallboard.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/infoCallboard.html.twig
@@ -12,6 +12,7 @@
         	<th>公告标题</th>
             <th>公告作者</th>
             <th>发表时间</th>
+            <th>公告分类</th>
             <!--  <th>公告内容</th>-->
             <th>操作</th>
         </tr>
@@ -21,6 +22,7 @@
           <td align="center">{{ item.title }} </td>
           <td align="center">{{ item.author }} </td>
           <td align="center">{{ item.startTime.date | date('Y-m-d') }}</td>
+          <td align="center">{{ item.categoryName }}</td>
           <td align="center"><a href="{{ path('_admin_editCallboard',{'id':item.id}) }}">编辑</a>&nbsp;&nbsp;
           <a href="{{ path('_admin_delCallboard',{'id':item.id}) }}" onclick="if (confirm('确定要删除吗？')) return true; else return false;">删除</a>
           </td>
