--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -95,7 +95,18 @@
             href="{{ path('_admin_infoBanner') }}" 
             target=main>banner编辑</A></TD></TR>
         <TR height=4>
-          <TD colSpan=2></TD></TR></TABLE>
+          <TD colSpan=2></TD></TR>
+
+        <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_addBanner') }}" 
+            target=main>banner添加</A></TD></TR>
+        <TR height=4>
+          <TD colSpan=2></TD></TR>
+          </TABLE>
+
       <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
         <TR height=22>
           <TD style="PADDING-LEFT: 30px" background="{{ asset('images/admin/menu_bt.jpg')}}"><A 
