对应 issue #94 公告分类的编辑

--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -128,6 +128,21 @@
           <TD><A class=menuChild 
             href="{{ path('_admin_infoCallboard') }}" 
             target=main>编辑公告</A></TD></TR>
+
+            <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_addCbType') }}" 
+            target=main>添加公告分类</A></TD></TR>
+
+            <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_infoCbType') }}" 
+            target=main>编辑公告分类</A></TD></TR>
+
         <TR height=4>
           <TD colSpan=2></TD></TR></TABLE>
           
