--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -18,7 +18,7 @@
 <script src="{{ asset('js/jquery.Jcrop.min.js')}}"></script>
 <script type="text/javascript">
 var path = '{{ asset("") }}';
-$(document).ready(function(){
+$(document).ready(function(){ 
     function showPreview(coords){
       var rx = 100 / coords.w;
       var ry = 100 / coords.h;
@@ -40,8 +40,6 @@ $(document).ready(function(){
       jQuery('#w').val(c.w);
       jQuery('#h').val(c.h);
     }
-    
-
   $('#attachment').fileupload({
         dataType: 'json',
         done: function (e, data) {
@@ -66,22 +64,146 @@ $(document).ready(function(){
           }  
         }
     });
-
 	{% if codeflag %}
       $("#info").hide();
       $("#update").show();
+      var year = $("#year");  
+      var month = $("#month");  
+      var newYear = {{ newYear }};
+      var newMonth = {{ newMonth }};
+      var yearhtml = '';
+      var monthhtml = '';
+      var date = new Date();  
+      var y = date.getFullYear();  
+      yearhtml += "<option value='0'>请选择年</option>";   
+      for (var i = 1940; i <= y ; i++) {  
+         if({{ year }}){
+            var usernewYear = {{ year }};
+            var selected = (usernewYear == i)?"selected='selected'":""; 
+         }else{
+            var selected = (newYear == i)?"selected='selected'":""; 
+         }
+         yearhtml += "<option value='"+i+ "' " + selected+ " >"+i+"</option>";
+      } 
+      year.html(yearhtml);
+      monthhtml += "<option value='0'>请选择月</option>";   
+      for (var i = 1; i < 13; i++) {  
+          var selected = '';
+          if({{ month }}){
+            var usernewMonth = {{ month }};
+            var selected = (usernewMonth == i)?"selected='selected'":""; 
+          }
+          if(newMonth) 
+              selected = (newMonth == i)?"selected='selected'":""; 
+          monthhtml += "<option value='"+i+ "' " + selected+ " >"+i+"</option>"; 
+      }
+      month.html(monthhtml);
+      var html = '';
+      {% if provinceId %}
+      $.ajax({
+            url: "{{ path('_user_getCity') }}?cid={{ provinceId }}",
+            post: "GET",
+            success:function(data){
+              var obj = eval(data);
+              for(var i=0;i<obj.length;i++){ 
+                  var selected = '';
+                 if({{ city }}){
+                    var oldcity = {{ city }};
+                    selected = ( oldcity == obj[i]['id'])?"selected='selected'":""; 
+                 }
+                 html += "<option value='"+obj[i]['id']+"'  " + selected+ " >"+obj[i]['cityName']+"</option>";                 
+              }
+              $("#city").html(html); 
+            }
+        });
+    {% endif %}
   {% else %}
       $("#update").hide();
   {% endif %}
-
   $(".upload").click(function (){
       $("#form1").submit();
   });
 	$("#change").click(function (){
 		$("#info").hide();
 		$("#update").show();
+    // var oldcity = {{ user.city }};
+    var html = '';
+    {% if user.province %}
+      $.ajax({
+            url: "{{ path('_user_getCity') }}?cid={{ user.province }}",
+            post: "GET",
+            success:function(data){
+              var obj = eval(data);
+              for(var i=0;i<obj.length;i++){ 
+                  var selected = '';
+                 if({{ user.city }}){
+                    var oldcity = {{ user.city }};
+                    selected = ( oldcity == obj[i]['id'])?"selected='selected'":""; 
+                 }
+
+                 html += "<option value='"+obj[i]['id']+"'  " + selected+ " >"+obj[i]['cityName']+"</option>";                 
+              }
+              $("#city").html(html); 
+            }
+        });
+    {% endif %}
+    var year = $("#year");  
+    var month = $("#month");  
+    var newYear = {{ newYear }};
+    var newMonth = {{ newMonth }};
+    var yearhtml = '';
+    var monthhtml = '';
+    var date = new Date();  
+    var y = date.getFullYear();  
+    yearhtml += "<option value='0'>请选择年</option>";   
+    for (var i = 1940; i <= y ; i++) {  
+       var selected = (newYear == i)?"selected='selected'":""; 
+       yearhtml += "<option value='"+i+ "' " + selected+ " >"+i+"</option>";
+    } 
+    year.html(yearhtml);
+    monthhtml += "<option value='0'>请选择月</option>";   
+    for (var i = 1; i < 13; i++) {  
+        var selected = '';
+          if(newMonth) 
+            selected = (newMonth == i)?"selected='selected'":""; 
+          monthhtml += "<option value='"+i+ "' " + selected+ " >"+i+"</option>"; 
+    }
+    month.html(monthhtml);
 	})
+
 });
+function selectYear(){
+  var month = $("#month"); 
+  if($("#year").val()=='0'){
+    month.get(0).options.length = 0; 
+    month.get(0).options.add(new Option("请选择月", "0"));  
+  }else{
+    month.get(0).options.length = 0; 
+    month.get(0).options.add(new Option("请选择月", "0"));  
+    for (var i = 1; i < 13; i++) {  
+            month.get(0).options.add(new Option(i, i));  
+    }
+  }
+}
+function selectCity(){
+  var html = ''; 
+  if($("#province").val()!=0){
+     $.ajax({
+              url: "{{ path('_user_getCity') }}?cid="+$('#province').val(),
+              post: "GET",
+              success:function(data){
+                var obj = eval(data);
+                for(var i=0;i<obj.length;i++){ 
+                    html += "<option value='"+obj[i]['id']+"'>"+obj[i]['cityName']+"</option>";                 
+                }
+                $("#city").html(html); 
+              }
+          });
+  }else{
+      html += "<option value='0'>请选择地区</option>";   
+      $("#city").html(html);
+  }
+}
 </script>
 </head>
 
@@ -131,22 +253,57 @@ $(document).ready(function(){
           <dd>登录账号：</dd>
           <dt>{{ user.email }} </dt>
         </li>
-        <li>
+        <li style="width:40%;">
           <dd>昵  称：</dd>
           <dt>{{ user.nick }}</dt>
         </li>
-        <li>
+        <li style="width:60%;">
           <dd>性  别：</dd>
           <dt>{% if user.sex==1 %} 
          男{% elseif user.sex==2 %}女{% else %}&nbsp;{% endif %}</dt>
         </li>
-       
+
+         <li  style="width:40%;">
+          <dd>出  生：</dd>
+          <dt>{% if newYear %} 
+                {% if newMonth %}
+                    {{ newYear }}年{{ newMonth }}月
+                {% else %}
+                    {{ newYear }}年
+                {% endif %}
+              {% else %}
+                  &nbsp;
+              {% endif %}</dt>
+        </li>
+      
+        <li style="width:60%;">
+          <dd>地  区：</dd>
+          <dt>
+            {{ disarea }}
+          </dt>
+        </li>  
+
         <li>
           <dd>手机号码：</dd>
           <dt>
             {{ user.tel }}
           </dt>
         </li>  
+
+        <li>
+          <dd>月收入:</dd>
+          <dt>
+            {{ usercomes }}
+          </dt>
+        </li>  
+
+        <li>
+          <dd>兴趣爱好：</dd>
+          <dt>
+            {{ userHobby }}
+          </dt>
+        </li>  
+
       </ul>
     </div>
   </section>
@@ -161,29 +318,70 @@ $(document).ready(function(){
           <dd>登录账号：</dd>
           <dt>{{ user.email }}  </dt>
         </li>
-        <li>
+        <li style="width:40%;">
           <dd>昵  称：</dd>
           <dt>
              {{ user.nick }}
           </dt>
         </li>
-        <li>
+        <li style="width:60%;">
           <dd>性  别：</dd>
           <dt>
-            <input name="sex" type="radio" {% if user.sex==1 %} checked='checked' {% endif %} value="1">
+            <input name="sex" type="radio" {% if sex %}{% if sex==1 %} checked='checked' {% endif %}{% endif %}{% if user.sex==1 %} checked='checked' {% endif %} value="1">
             男
-            <input name="sex" type="radio" {% if user.sex==2 %} checked='checked' {% endif %} value="2">
+            <input name="sex" type="radio" {% if sex %}{% if sex==2 %} checked='checked' {% endif %}{% endif %}{% if user.sex==2 %} checked='checked' {% endif %} value="2">
             女</dt>
         </li>
+
+
+       <li style="width:40%;"><dd>出  生：</dd>
+            <dt><select id="year" name="year" onchange="selectYear()"></select>      
+            &nbsp;<select id="month" name="month"></select>      
+          </dt>
+      </li>
+
+          <li style="width:60%;"><dd>地区：</dd>
+            <dt><select id="province" name="province" onchange="selectCity()">
+            <option value="0">请选择省</option>
+              {% for item in province %}
+               <option value="{{ item.id }}" {% if provinceId %} {% if provinceId == item.id %} selected = "selected" {% endif %} {% endif %}{% if user.province == item.id %} selected = "selected" {% endif %}>{{ item.provinceName }}</option>
+              {% endfor %}
+            
+            </select>
+            <select id="city" name="city"><option value='0'>请选择地区</option>
+              </select>
+              </dt></li>
+
+
         <li>
           <dd>手机号码：</dd>
           <dt>
-            <input name="tel" type="text" value="{{ user.tel }}"><br/>
+        <input name="tel" type="text" value="{% if tel %}{{ tel }}{% else %}{{ user.tel }}{% endif %}">
+          </dt>
+        </li>
+
+         <li>
+          <dd>月收入：</dd>
+          <dt>
+           {% for item in income %}
+            <input name="income" type="radio" value="{{ item.id }}" {% if month_income %}{% if month_income==item.id %} checked='checked' {% endif %}{% endif %}{% if user.income == item.id %} checked = "checked" {% endif %}>{{ item.income }}
+            {% endfor %}
+          </dt>
+        </li>
+
+         <li>
+          <dd>兴趣爱好：</dd>
+          <dt>
+           {% for item in hobbyList %}
+            <input type="checkbox"  name="hobby[]" value="{{ item.id }}" {% if hobby %}{% for i in hobby %} {% if i ==item.id %} checked = "checked" {% endif %}{% endfor %}{% endif %}  {% if newHobby %}{% for i in newHobby %} {% if i ==item.id %} checked = "checked" {% endif %}{% endfor %}{% endif %}>{{ item.hobbyName }}
+           {% endfor %}
+                  <br/>
                    {% if codeflag  %}
                      <font color='red'>{{ codeflag }}</font>
                    {% endif %}
           </dt>
         </li>
+
         <li><dd>&nbsp;</dd>
           <dt>
             <input name="update" type="submit" value="保存" class="infoFinish">
